correction pages paths

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <span></span>
                     <span></span>
                 </div>
-                <a href="home.html">
+                <a href="index.html">
                     <img src="icons/logo.png">
                     <h1>E-shop</h1>
                 </a>
