--- a/dashboard.html
+++ b/dashboard.html
@@ -24,7 +24,7 @@
                 <span></span>
                 <span></span>
             </div>
-            <a href="home.html">
+            <a href="index.html">
                 <img src="icons/logo.png">
                 <h1>E-shop</h1>
             </a>
@@ -32,7 +32,7 @@
         <div class="navigation-links">
             <ul>
                 <li><a href="dashboard.html"><img src="icons/dashboard.png">Dashboard</a></li>
-                <li><a href="home.html"><img src="icons/home.png">Home</a></li>
+                <li><a href="index.html"><img src="icons/home.png">Home</a></li>
                 <li><a href="products.html"><img src="icons/products.png">Products</a></li>
                 <li><a href="user.html"><img src="icons/user-profile.png">User Profile</a></li>
                 <li><a href="#"><img src="icons/tabelList.png">Tabel list</a></li>
