--- a/products.html
+++ b/products.html
@@ -21,14 +21,14 @@
                     <span></span>
                     <span></span>
                 </div>
-                <a href="home.html">
+                <a href="index.html">
                     <img src="icons/logo.png">
                     <h1>E-shop</h1>
                 </a>
             </div>
             <div class="navigation-links">
                 <ul>
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
                     <li><a href="dashboard.html">Dashboard</a></li>
                 </ul>
@@ -72,7 +72,7 @@
                     </div>
                 <div class="home-page-button">
                     <button>
-                        <a href="home.html">Continue shopping</a>
+                        <a href="index.html">Continue shopping</a>
                     </button>
                 </div>
             </div>
