--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li><a href="home.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
                     <li><a style="cursor: pointer" onclick="scrollToFooter()">Follow us</a></li>
-                    <li><a href="#">Dashboard</a></li>
+                    <li><a href="dashboard.html">Dashboard</a></li>
                 </ul>
             </div>
             <div class="cart-and-search-container">
